--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -25,6 +25,7 @@ msgstr ""
 "PO-Revision-Date: 2009-01-16 14:09+0530\n"
 "Last-Translator: Amanpreet Singh Alam <aalam@users.sf.net>\n"
 "Language-Team: Punjabi/Panjabi <kde-i18n-doc@lists.kde.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
