--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nobootloader (1.31) UNRELEASED; urgency=low
+
+  * use user-params to add additional parameters to the kernel command
+    line, so that root-on-NBD shows the necessary nbdroot= parameter.
+
+ -- Wouter Verhelst <wouter@debian.org>  Sun, 07 Aug 2011 11:59:17 +0200
+
 nobootloader (1.30) unstable; urgency=low
 
   * Team upload
