--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,19 @@
-nobootloader (1.31) UNRELEASED; urgency=low
+nobootloader (1.31) unstable; urgency=low
 
+  [ Wouter Verhelst ]
   * use user-params to add additional parameters to the kernel command
     line, so that root-on-NBD shows the necessary nbdroot= parameter.
 
- -- Wouter Verhelst <wouter@debian.org>  Sun, 07 Aug 2011 11:59:17 +0200
+  [ Updated translations ]
+  * German (de.po) by Holger Wansing
+  * Hebrew (he.po) by Lior Kaplan
+  * Italian (it.po) by Milo Casagrande
+  * Macedonian (mk.po) by Arangel Angov
+  * Russian (ru.po) by Yuri Kozlov
+  * Sinhala (si.po) by Danishka Navin
+  * Simplified Chinese (zh_CN.po) by YunQiang Su
+
+ -- Wouter Verhelst <wouter@debian.org>  Fri, 02 Sep 2011 13:18:12 +0200
 
 nobootloader (1.30) unstable; urgency=low
 
